Bugfix/general fixes (#137)
* fix(set): tighten validation and transaction safety for Set resource

- Sync @Pattern (no special chars) between Create and Update DTOs
- Bump title @Length from 3-50 to 3-100 on both DTOs
- Add @Length(max=500) on description for both DTOs
- Add @NotNull on privacy for both DTOs
- Add @Transactional to updateSet and deleteSet
- Add sync=true to @Cacheable on getSet to prevent cache stampede
- Add MethodArgumentTypeMismatchException handler for enum param errors

* refactor: code quality improvements (Tier 1 & 2)

Tier 1:
- Replace .collect(Collectors.toList()) with .toList() (Java 16+) in 7 files
- Extract hardcoded PDF-to-HTML URL to application.yml (pdftohtml.api)
- Remove 3 unused Collectors imports

Tier 2:
- Fix SQL table name note_explain -> note_explains to match entity
- Add missing calendar_event_id column migration to todo_goal.sql
- Add logging to 6 silently-swallowing catch (Exception) blocks

* refactor: Tier 3 — eliminate N+1 queries and replace List<Object[]> with interface projections

#5 — KnowledgeAnalysisServiceImpl: replace per-ID lookup with batch fetch + LinkedHashMap dedup (N+M -> 2 queries)
#6 — InviteNotificationSender: replace per-user member lookup with batch fetch (N -> 1 query per method)
#7 — 4 repos returning List<Object[]>: create 8 projection interfaces in dto/helper/, update repos + callers (SocialServiceImpl, ActivityLogServiceImpl, OnboardingSubmissionServiceImpl)
Bonus — AdminPlatformStatsController: fix double-call aggregateAccountType() anti-pattern

* refactor(admin): extract AdminPlatformStatsService from AdminPlatformStatsController

#3 — AdminPlatformStatsController was the only controller out of 37
injecting repositories directly (6 repos). Move all stat-gathering logic
into a proper service interface + implementation following the same pattern
as AdminUserManagementService.